# biohub-cell-tracking

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/: .gitkeep
models/: .gitkeep
notebooks/: 01_exploration.ipynb  02_detection_baseline.ipynb  03_tracking_baseline.ipynb  04_training_demo.ipynb  05_inference_submission.ipynb  06_pipeline.ipynb  07_hungarian_tracker.ipynb
outputs/: .gitkeep
src/: augmentations.py  config.py  dataset.py  detector.py  experiment.py  logging_utils.py  losses.py  metrics.py  model.py  predict.py  seed.py  tracker.py  train.py
tests/: test_dataset.py  test_model.py  test_seed.py  test_tracker.py
