[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biohub-cell-tracking"
version = "0.1.0"
description = "3D cell tracking pipeline for the Kaggle BioHub Cell Tracking During Development competition"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]
